2023-08-11T16:17:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5834766111 # 1107
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
* notice: last 14d: unq all: 7 24
* notice: prev accum: outdated-unq outdated-all / unq all: 430 752 / 452 780
* notice: next accum: outdated-unq outdated-all / unq all: 433 757 / 452 781
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-07-28] / [2023-08-11]

2023-08-11T08:18:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5830435068 # 1106
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
* notice: last 14d: unq all: 8 26
* notice: prev accum: outdated-unq outdated-all / unq all: 430 752 / 450 778
* notice: next accum: outdated-unq outdated-all / unq all: 430 752 / 452 780
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-28 2023-08-11]

2023-08-10T16:20:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5823595374 # 1104
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-10
* notice: last 14d: unq all: 8 26
* notice: prev accum: outdated-unq outdated-all / unq all: 429 750 / 450 777
* notice: next accum: outdated-unq outdated-all / unq all: 430 752 / 450 778
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-27] / [2023-08-10]

2023-08-10T08:19:54Z: