@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-11T16:17:33Z",
+  "timestamp" : "2023-08-12T08:17:13Z",
   "count_outdated" : 757,
   "uniques_outdated" : 433,
-  "count" : 781,
-  "uniques" : 452,
+  "count" : 782,
+  "uniques" : 453,
   "clones" : [
     {
       "timestamp": "2023-07-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -112,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
